# Emu64

./: .gitignore  CMakeLists.txt  NOTE  compile_commands.json  hello.S  main.c
include/: Decoders.hpp  Emu64.h  FileMapping.hpp  Memory.hpp
src/: DecoderImpl.cpp  Emu64.cpp  Memory.cpp  Reader.cpp
src/linux/: FileMap.cpp
src/windows/: FileMap.cpp
utils/: TableGen.cpp  tables.cfg
